--- a/ToyProjectManagementApp/Views/ThirdTabbar.storyboard
+++ b/ToyProjectManagementApp/Views/ThirdTabbar.storyboard
@@ -25,10 +25,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Trc-aZ-S7y">
-                                <rect key="frame" x="14" y="114" width="364.66666666666669" height="33"/>
+                                <rect key="frame" x="14" y="113.33333333333331" width="364.66666666666669" height="33"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 수" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbW-TK-Hvd">
-                                        <rect key="frame" x="0.0" y="6.3333333333333268" width="48.666666666666664" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="6.333333333333341" width="48.666666666666664" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -47,7 +47,7 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KWT-iD-i6U">
-                                <rect key="frame" x="0.0" y="167" width="393" height="602"/>
+                                <rect key="frame" x="0.0" y="166.33333333333331" width="393" height="602.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="P5V-uK-K3m">
@@ -68,7 +68,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KWT-iD-i6U" secondAttribute="trailing" id="7ok-Vs-tfc"/>
                             <constraint firstItem="Trc-aZ-S7y" firstAttribute="leading" secondItem="5FV-Ts-Kl9" secondAttribute="leading" id="Hog-3K-pub"/>
                             <constraint firstItem="5FV-Ts-Kl9" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="14" id="L3c-fw-uwV"/>
-                            <constraint firstItem="Trc-aZ-S7y" firstAttribute="top" secondItem="5FV-Ts-Kl9" secondAttribute="bottom" constant="20.666666666666671" id="QpU-sE-DSY"/>
+                            <constraint firstItem="Trc-aZ-S7y" firstAttribute="top" secondItem="5FV-Ts-Kl9" secondAttribute="bottom" constant="20" id="QpU-sE-DSY"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="KWT-iD-i6U" secondAttribute="bottom" id="eBq-dW-vPd"/>
                             <constraint firstItem="KWT-iD-i6U" firstAttribute="top" secondItem="Trc-aZ-S7y" secondAttribute="bottom" constant="20" id="g8D-tW-PVk"/>
                             <constraint firstItem="KWT-iD-i6U" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="luC-IC-EMs"/>
