--- a/ToyProjectManagementApp/Views/Main.storyboard
+++ b/ToyProjectManagementApp/Views/Main.storyboard
@@ -333,7 +333,7 @@
             </objects>
             <point key="canvasLocation" x="2886" y="135"/>
         </scene>
-        <!--Main Tabbar View Controller-->
+        <!--프로젝트-->
         <scene sceneID="ueE-Gr-mSl">
             <objects>
                 <viewController storyboardIdentifier="MainTabbarViewController" id="UAM-km-w7Y" customClass="MainTabbarViewController" customModule="ToyProjectManagementApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -479,8 +479,7 @@
                             <constraint firstItem="dyl-vv-GWe" firstAttribute="top" secondItem="iJn-vt-GFO" secondAttribute="bottom" constant="5" id="j4j-iE-yKg"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="2" title="" image="CategoryBlack" selectedImage="CategoryFill" id="Nwg-c4-cJg">
-                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
+                    <tabBarItem key="tabBarItem" tag="2" title="프로젝트" image="CategoryBlack" selectedImage="CategoryFill" id="Nwg-c4-cJg">
                         <inset key="largeContentSizeImageInsets" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
                     </tabBarItem>
                     <connections>
@@ -542,7 +541,7 @@
         <image name="logo" width="1024" height="1024"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <namedColor name="primaryColor">
-            <color red="0.72941176470588232" green="0.59999999999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.72899997234344482" green="0.60000002384185791" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
