--- a/ToyProjectManagementApp/Views/ThirdTabbar.storyboard
+++ b/ToyProjectManagementApp/Views/ThirdTabbar.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Third Tabbar View Controller-->
+        <!--알림-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="ThirdTabbarViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="ThirdTabbarViewController" customModule="ToyProjectManagementApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -75,9 +75,7 @@
                             <constraint firstItem="5FV-Ts-Kl9" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="14" id="qBA-Ie-amR"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="notification" selectedImage="notificataionFill" id="6wf-1r-h1E">
-                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
-                    </tabBarItem>
+                    <tabBarItem key="tabBarItem" title="알림" image="notification" selectedImage="notificataionFill" id="6wf-1r-h1E"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="notificationAlertLabel" destination="pbW-TK-Hvd" id="VGH-EZ-3HY"/>
